[gd_scene load_steps=29 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://turret.png" type="Texture" id=2]
[ext_resource path="res://missile-launcher.png" type="Texture" id=3]
[ext_resource path="res://healing-shield.png" type="Texture" id=4]
[ext_resource path="res://1a.png" type="Texture" id=5]
[ext_resource path="res://supersonic-bullet.png" type="Texture" id=6]
[ext_resource path="res://minigun.png" type="Texture" id=7]
[ext_resource path="res://double-shot.png" type="Texture" id=8]
[ext_resource path="res://silver-bullet.png" type="Texture" id=9]
[ext_resource path="res://shatter.png" type="Texture" id=10]
[ext_resource path="res://big_font.tres" type="DynamicFont" id=11]
[ext_resource path="res://AbilityBar.tscn" type="PackedScene" id=12]
[ext_resource path="res://Mont-HeavyDEMO.otf" type="DynamicFontData" id=13]
[ext_resource path="res://small_font.tres" type="DynamicFont" id=14]
[ext_resource path="res://pause-button.png" type="Texture" id=15]
[ext_resource path="res://arrow.png" type="Texture" id=16]
[ext_resource path="res://arrow2.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=13]
size = 48
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.6, 0.6, 0.6, 0.431373 )

[sub_resource type="StyleBoxFlat" id=16]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 1, 0, 0.0235294, 0.235294 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 1, 0, 0.392157 )

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0.466667, 0, 0.862745 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 1, 0, 0.235294 )

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false
border_width_left = 4
border_color = Color( 0.329412, 0.564706, 0.329412, 1 )

[sub_resource type="StyleBoxFlat" id=14]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.329412, 0.564706, 0.329412, 1 )

[sub_resource type="Theme" id=15]
default_font = ExtResource( 11 )
Button/styles/disabled = SubResource( 14 )
Button/styles/focus = SubResource( 14 )
Button/styles/hover = SubResource( 14 )
Button/styles/normal = SubResource( 14 )
Button/styles/pressed = SubResource( 14 )

[sub_resource type="StyleBoxFlat" id=18]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0.784314 )

[sub_resource type="DynamicFont" id=17]
size = 64
font_data = ExtResource( 13 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
custom_fonts/font = SubResource( 13 )
text = "WAVE 1"
align = 1

[node name="Hint3" type="Panel" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 69.0

[node name="Label" type="Label" parent="Hint3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
custom_fonts/font = SubResource( 13 )
text = "WAVE 1 STARTS IN 10"
align = 1

[node name="Hint1" type="Panel" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="Hint1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
custom_fonts/font = SubResource( 13 )
text = "SELECT ONE SATELLITE TO FOLLOW"
align = 1

[node name="Label2" type="Label" parent="Hint1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -44.0
custom_fonts/font = ExtResource( 14 )
text = "Confirm: Left Click | Cancel: Right Click"
align = 1
valign = 1

[node name="Hint2" type="Panel" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="Hint2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
custom_fonts/font = SubResource( 13 )
text = "LAUNCH SATELLITE"
align = 1

[node name="Label2" type="Label" parent="Hint2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -44.0
custom_fonts/font = ExtResource( 14 )
text = "Confirm: Left Click | Cancel: Right Click"
align = 1
valign = 1

[node name="SatelliteInfo" type="PanelContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -228.0
margin_top = -113.0
grow_vertical = 0
custom_styles/panel = SubResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="SatelliteInfo"]
margin_left = 8.0
margin_top = 8.0
margin_right = 220.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="SatelliteInfo/VBoxContainer"]
margin_right = 212.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 11 )
text = "TURRET"
align = 1

[node name="Label3" type="Label" parent="SatelliteInfo/VBoxContainer"]
margin_top = 27.0
margin_right = 212.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 14 )
text = "Left Click: Fire (If possible)
Right Click: Accelerate"
align = 1

[node name="Button2" type="Button" parent="SatelliteInfo/VBoxContainer"]
margin_top = 75.0
margin_right = 212.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 11 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 16 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
text = "RELEASE(R)"

[node name="Button" type="Button" parent="SatelliteInfo/VBoxContainer"]
margin_top = 118.0
margin_right = 212.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 11 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
text = "FOLLOW(F)"

[node name="PanelContainer" type="PanelContainer" parent="SatelliteInfo/VBoxContainer"]
margin_top = 161.0
margin_right = 212.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 8 )

[node name="Label" type="Label" parent="SatelliteInfo/VBoxContainer/PanelContainer"]
margin_left = 4.0
margin_right = 212.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 11 )
text = " ABILITY"

[node name="HBoxContainer" type="HBoxContainer" parent="SatelliteInfo/VBoxContainer"]
margin_top = 188.0
margin_right = 212.0
margin_bottom = 278.0
custom_constants/separation = 0

[node name="Control" type="Control" parent="SatelliteInfo/VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 90.0
rect_min_size = Vector2( 12, 0 )
size_flags_vertical = 3

[node name="AbilityBars" type="VBoxContainer" parent="SatelliteInfo/VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 212.0
margin_bottom = 90.0
size_flags_horizontal = 3

[node name="AbilityBar" parent="SatelliteInfo/VBoxContainer/HBoxContainer/AbilityBars" instance=ExtResource( 12 )]
margin_right = 200.0
margin_bottom = 41.0

[node name="AbilityBar2" parent="SatelliteInfo/VBoxContainer/HBoxContainer/AbilityBars" instance=ExtResource( 12 )]
margin_top = 49.0
margin_right = 200.0
margin_bottom = 90.0

[node name="Skills" type="PanelContainer" parent="."]
margin_right = 78.0
margin_bottom = 67.0
custom_styles/panel = SubResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="Skills"]
margin_left = 8.0
margin_top = 8.0
margin_right = 95.0
margin_bottom = 411.0
theme = SubResource( 15 )

[node name="Label" type="Label" parent="Skills/VBoxContainer"]
margin_right = 87.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 11 )
text = "LAUNCH"

[node name="Button2" type="Button" parent="Skills/VBoxContainer"]
margin_top = 27.0
margin_right = 87.0
margin_bottom = 67.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 14 )
text = "60"
icon = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="Skills/VBoxContainer/Button2"]
visible = false
margin_left = 87.0
margin_right = 115.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 18 )

[node name="Label" type="Label" parent="Skills/VBoxContainer/Button2/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 167.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Standard turret"
align = 1
valign = 1

[node name="Button3" type="Button" parent="Skills/VBoxContainer"]
margin_top = 75.0
margin_right = 87.0
margin_bottom = 115.0
text = "60"
icon = ExtResource( 10 )

[node name="PanelContainer2" type="PanelContainer" parent="Skills/VBoxContainer/Button3"]
visible = false
margin_left = 87.0
margin_right = 258.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 18 )

[node name="Label" type="Label" parent="Skills/VBoxContainer/Button3/PanelContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 267.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Increase explosion range"
align = 1
valign = 1

[node name="Button4" type="Button" parent="Skills/VBoxContainer"]
margin_top = 123.0
margin_right = 87.0
margin_bottom = 163.0
text = "60"
icon = ExtResource( 3 )

[node name="PanelContainer2" type="PanelContainer" parent="Skills/VBoxContainer/Button4"]
visible = false
margin_left = 87.0
margin_right = 258.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 18 )

[node name="Label" type="Label" parent="Skills/VBoxContainer/Button4/PanelContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 249.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Increase homing ability"
align = 1
valign = 1

[node name="Button5" type="Button" parent="Skills/VBoxContainer"]
margin_top = 171.0
margin_right = 87.0
margin_bottom = 211.0
text = "60"
icon = ExtResource( 8 )

[node name="PanelContainer2" type="PanelContainer" parent="Skills/VBoxContainer/Button5"]
visible = false
margin_left = 87.0
margin_right = 258.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 18 )

[node name="Label" type="Label" parent="Skills/VBoxContainer/Button5/PanelContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 174.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Increase barrels"
align = 1
valign = 1

[node name="Button6" type="Button" parent="Skills/VBoxContainer"]
margin_top = 219.0
margin_right = 87.0
margin_bottom = 259.0
text = "60"
icon = ExtResource( 6 )

[node name="PanelContainer2" type="PanelContainer" parent="Skills/VBoxContainer/Button6"]
visible = false
margin_left = 87.0
margin_right = 258.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 18 )

[node name="Label" type="Label" parent="Skills/VBoxContainer/Button6/PanelContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 230.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Increase bullet speed"
align = 1
valign = 1

[node name="Button7" type="Button" parent="Skills/VBoxContainer"]
margin_top = 267.0
margin_right = 87.0
margin_bottom = 307.0
text = "60"
icon = ExtResource( 7 )

[node name="PanelContainer2" type="PanelContainer" parent="Skills/VBoxContainer/Button7"]
visible = false
margin_left = 87.0
margin_right = 258.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 18 )

[node name="Label" type="Label" parent="Skills/VBoxContainer/Button7/PanelContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 184.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Increase fire rate"
align = 1
valign = 1

[node name="Button8" type="Button" parent="Skills/VBoxContainer"]
margin_top = 315.0
margin_right = 87.0
margin_bottom = 355.0
rect_pivot_offset = Vector2( 106, -60 )
text = "60"
icon = ExtResource( 9 )

[node name="PanelContainer2" type="PanelContainer" parent="Skills/VBoxContainer/Button8"]
visible = false
margin_left = 87.0
margin_right = 258.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 18 )

[node name="Label" type="Label" parent="Skills/VBoxContainer/Button8/PanelContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 188.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Increase damage"
align = 1
valign = 1

[node name="Button9" type="Button" parent="Skills/VBoxContainer"]
margin_top = 363.0
margin_right = 87.0
margin_bottom = 403.0
text = "60"
icon = ExtResource( 4 )

[node name="PanelContainer2" type="PanelContainer" parent="Skills/VBoxContainer/Button9"]
visible = false
margin_left = 87.0
margin_right = 258.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 18 )

[node name="Label" type="Label" parent="Skills/VBoxContainer/Button9/PanelContainer2"]
margin_left = 4.0
margin_top = 4.0
margin_right = 211.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Increase repair rate"
align = 1
valign = 1

[node name="Progress" type="ColorRect" parent="Skills"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 95.0
margin_bottom = 411.0
color = Color( 0, 0, 0, 0.807843 )

[node name="ColorRect" type="ColorRect" parent="Skills/Progress"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.588235 )

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 37.0
grow_horizontal = 0
icon = ExtResource( 15 )
flat = true

[node name="Pause" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -288.0
margin_right = 300.0
margin_bottom = 288.0

[node name="Label" type="Label" parent="Pause/VBoxContainer"]
margin_right = 664.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 17 )
text = "PAUSED"
align = 1
valign = 1

[node name="Button12" type="Button" parent="Pause/VBoxContainer"]
margin_top = 67.0
margin_right = 664.0
margin_bottom = 94.0
theme = SubResource( 15 )
text = "RESUME"

[node name="Button11" type="Button" parent="Pause/VBoxContainer"]
margin_top = 102.0
margin_right = 664.0
margin_bottom = 129.0
theme = SubResource( 15 )
text = "QUIT"

[node name="Control" type="Control" parent="Pause/VBoxContainer"]
margin_top = 137.0
margin_right = 664.0
margin_bottom = 201.0
rect_min_size = Vector2( 0, 64 )

[node name="Label2" type="Label" parent="Pause/VBoxContainer"]
margin_top = 209.0
margin_right = 664.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 17 )
text = "HELP"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/VBoxContainer"]
margin_top = 276.0
margin_right = 664.0
margin_bottom = 576.0

[node name="Prev" type="Button" parent="Pause/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 300.0
flat = true

[node name="TextureRect" type="TextureRect" parent="Pause/VBoxContainer/HBoxContainer/Prev"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="Pause/VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 632.0
margin_bottom = 300.0
rect_min_size = Vector2( 600, 300 )
texture = ExtResource( 5 )
expand = true

[node name="Next" type="Button" parent="Pause/VBoxContainer/HBoxContainer"]
margin_left = 640.0
margin_right = 664.0
margin_bottom = 300.0
flat = true

[node name="TextureRect" type="TextureRect" parent="Pause/VBoxContainer/HBoxContainer/Next"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="Label3" type="Label" parent="Pause/VBoxContainer"]
margin_top = 584.0
margin_right = 664.0
margin_bottom = 601.0
custom_fonts/font = ExtResource( 14 )
text = "1 / 8"
align = 1
valign = 1

[node name="GameOver" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.0
margin_top = -29.5
margin_right = 195.0
margin_bottom = 29.5

[node name="Label2" type="Label" parent="GameOver/VBoxContainer"]
margin_right = 390.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 17 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Button9" type="Button" parent="GameOver/VBoxContainer"]
margin_top = 67.0
margin_right = 390.0
margin_bottom = 94.0
theme = SubResource( 15 )
text = "RESTART"

[node name="Button10" type="Button" parent="GameOver/VBoxContainer"]
margin_top = 102.0
margin_right = 390.0
margin_bottom = 129.0
theme = SubResource( 15 )
text = "QUIT"

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]
